# streamlit_report

./: MANIFEST.in  README.md  demo.py  helperFile.py  htmlClass.py  pyproject.toml  report.py  requirements.txt  setup.py  style.html
examples/: data.csv  demo.py  example_output.html  helperFile.py  multipage_example.html  requirements.txt  singlepage_example.html  style.html
pages/: secondPage.py
src/streamlit-report/: report.py
src/streamlit_report/: __init__.py  htmlClass.py  old.py  report.py  style.html
src/streamlit_report/pages/: second.py
tests/: test-multiselect.py  test-slider-range.py  test-text.py
tests/app_testing/: test_app.py  test_helper.py
tests/app_testing/via_nav/: page_a.py  page_b.py  test_nav_app.py
tests/app_testing/via_pages/: test_helper.py
tests/app_testing/via_pages/pages/: second_page.py
