[project]
name = "streamlit-report"
version = "0.0.5-alpha"
description = ""
authors = [
    {name = "Nick Xydis",email = "nsxydis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
# Note these are the versions tested with, not necessarily the required versions
dependencies = [
    "polars (>=1.29.0,<2.0.0)",
    "markdown (>=3.8,<4.0)",
    "altair (>=5.5.0,<6.0.0)",
    "streamlit (>=1.45.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "streamlit_report", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"