[project]
name = "streamlit-report"
version = "0.0.7"
description = ""
authors = [
    {name = "Nick Xydis",email = "nsxydis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"   # Tested with 3.13.3

# NOTE: Some versions may not be compatible
dependencies = [
    "polars",   # Tested with 1.31.0
    "markdown", # Tested with 3.8.2
    "altair",   # Tested with 5.5.0
    "streamlit" # Tested with 1.46.1
]

[tool.poetry]
packages = [{include = "streamlit_report", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"